--- a/iframe.html
+++ b/iframe.html
@@ -1,12 +1,19 @@
 <html>
     <head><title>iframe</title></head>
     <body>
-        <iframe src="https://indianexpress.com/" frameborder="0" width="400" title="Indian Express"></iframe>
-        <iframe src="https://www.wikipedia.org/" frameborder="0" width="500" title="wikipedia"></iframe>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/lD0-ztCFydA?si=mQP8YU1BABYWta16" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/km5ILe5Mzpo?si=YhoWtGx6ekRVSLBP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <iframe src="https://en.wikipedia.org/wiki/Bengali_language" frameborder="1" width="400">Bengali</iframe>
-        <iframe src="https://www.google.com/maps/place/Queen+Mary's+Lake/@-37.1090827,-12.291542,17z/data=!3m1!4b1!4m6!3m5!1s0x25a3b1200e64f8f:0xee79a86ceee82f49!8m2!3d-37.1090934!4d-12.289042!16s%2Fg%2F12vs_gz6f?entry=ttu" frameborder="0"></iframe>   
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3181.8334135920436!2d-12.291541974740163!3d-37.109082744093215!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x25a3b1200e64f8f%3A0xee79a86ceee82f49!2sQueen%20Mary&#39;s%20Lake!5e0!3m2!1sen!2sin!4v1722234460549!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <center>
+        <h1 style="background-color: aquamarine;">INDIAN EXPRESS</h1>
+        <iframe src="https://indianexpress.com/" frameborder="1" width="400" height="500" title="Indian Express"></iframe><br>
+        <h1 style="background-color: aquamarine;">WIKIPEDIA</h1>
+        <iframe src="https://www.wikipedia.org/" frameborder="1" width="500" height="500" title="wikipedia"></iframe><br>
+        <h1 style="background-color: aquamarine;">SAAHO TEASER</h1>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/lD0-ztCFydA?si=mQP8YU1BABYWta16" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br>
+        <h1 style="background-color: aquamarine;">NATIONAL GEOGRAPHY</h1>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/km5ILe5Mzpo?si=YhoWtGx6ekRVSLBP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br>
+        <h1 style="background-color: aquamarine;">BENGALI LANGUAGE</h1>
+        <iframe src="https://en.wikipedia.org/wiki/Bengali_language" frameborder="1" width="400" height="500">Bengali</iframe><br>
+        <h1 style="background-color: aquamarine;">QUEEN MARY'S LAKE (THE LOVE LAKE)</h1>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12727.335881400877!2d-12.299266807789037!3d-37.109069492195275!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x25a3b1200e64f8f%3A0xee79a86ceee82f49!2sQueen%20Mary&#39;s%20Lake!5e0!3m2!1sen!2sin!4v1722256371772!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </center>
     </body>
 </html>
